--- a/style-rtl.scss
+++ b/style-rtl.scss
@@ -98,13 +98,18 @@ body{
         max-width: 1280px;
         margin: auto;
     }
-    .NewslettersTell p{
+    .NewslettersTell{
         border: 1px solid white;
         border-radius: 10px;
         max-width: 80%;
         color: white;
         display: flex;
         justify-content: space-between;
+        max-height: 40px;
+        margin: 15px 0;
+        p{
+            margin: 0;
+        }
     }
     input[type="tel"] {
         background-color:#1e1e1e ;
@@ -112,13 +117,17 @@ body{
         padding: 10px 7px;
         border: none;
         margin-right: 10px;
-        // width: 80%;
+        width: 100%;
+        color: white;
         &::placeholder{
             color: white;
             font-size: 14px;
             font-weight: 200;
-            // padding: 10px;
+            font-family: 'yekanbakhweb' !important;
         }
+    }
+    input:focus {
+        outline: none;
     }
     input[type="submit"] {
         background-color:#1e1e1e ;
@@ -126,7 +135,8 @@ body{
         color: #cdb578;
         font-size: 18px;
         font-weight: 900;
-        // width: 20%;
+        width: 100%;
+        margin-top: 6px;
         &::placeholder{
             color: white;
             font-size: 14px;
