--- a/style-rtl.css
+++ b/style-rtl.css
@@ -38,10 +38,56 @@
   src: url("fonts/yekanbakh/YekanBakhFaNum-ExtraBlack.woff2");
   font-weight: 910;
 }
-body {
-  font-family: "yekanbakhweb";
+* {
+  box-sizing: border-box;
 }
 
+body {
+  font-family: "yekanbakhweb";
+  margin: 0;
+}
+
+a {
+  color: inherit;
+  text-decoration: none;
+}
+
+.mainHeaderBack {
+  background-color: #282828;
+  color: white;
+}
+.mainHeaderBack .mainHeader {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+.mainHeaderBack .mainHeader .menuSection ul {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+.mainHeaderBack .mainHeader .menuSection ul li {
+  list-style: none;
+  padding: 5px 10px;
+  font-weight: 600;
+}
+.mainHeaderBack .mainHeader .menuSection #menu-item-21 {
+  color: #cdb578;
+}
+.mainHeaderBack .mainHeader .signSection {
+  display: flex;
+  align-items: center;
+}
+.mainHeaderBack .mainHeader .signSection svg {
+  margin-right: 20px;
+}
+.mainHeaderBack .mainHeader path, .mainHeaderBack .mainHeader circle {
+  fill: white;
+}
+.mainHeaderBack .mainView {
+  max-width: 1280px;
+  margin: auto;
+}
 .mainFooterBack {
   background-color: #1e1e1e;
   padding: 50px 20px;
@@ -122,8 +168,6 @@ body {
   }
 }
 .mainFooterBack .mainFooter a, .mainFooterBack .mainFooter p {
-  text-decoration: none;
-  color: inherit;
   font-size: 16px;
   font-weight: 300;
 }
