--- a/style-rtl.css
+++ b/style-rtl.css
@@ -73,6 +73,7 @@ a {
 }
 .mainHeaderBack .mainHeader .menuSection #menu-item-21 {
   color: #cdb578;
+  font-weight: 700;
 }
 .mainHeaderBack .mainHeader .signSection {
   display: flex;
