--- a/style-rtl.scss
+++ b/style-rtl.scss
@@ -30,6 +30,7 @@ a{
             }
             #menu-item-21{
                 color: #cdb578;
+                font-weight: 700;
             }
         }
         .signSection{
