--- a/style-rtl.css
+++ b/style-rtl.css
@@ -71,6 +71,27 @@ a {
   padding: 5px 10px;
   font-weight: 600;
 }
+.mainHeaderBack .mainHeader .menuSection ul li ul {
+  position: absolute;
+  background-color: white;
+  color: black;
+  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+  border-radius: 10px;
+  margin-top: 5px;
+  padding: 0;
+  display: flex;
+  flex-direction: column;
+  visibility: hidden;
+}
+.mainHeaderBack .mainHeader .menuSection ul li ul li {
+  border-bottom: 1px solid black;
+}
+.mainHeaderBack .mainHeader .menuSection ul li ul #menu-item-29 {
+  border: none;
+}
+.mainHeaderBack .mainHeader .menuSection ul li:hover ul {
+  visibility: visible;
+}
 .mainHeaderBack .mainHeader .menuSection #menu-item-21 {
   color: #cdb578;
   font-weight: 700;
