--- a/style-rtl.scss
+++ b/style-rtl.scss
@@ -26,6 +26,28 @@ a{
                 list-style: none;
                 padding: 5px 10px;
                 font-weight: 600;
+                ul{
+                    position: absolute;
+                    background-color: white;
+                    color: black;
+                    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+                    border-radius: 10px;
+                    margin-top: 5px;
+                    padding: 0;
+                    display: flex;
+                    flex-direction: column;
+                    visibility: hidden;
+                    
+                    li{
+                        border-bottom: 1px solid black;
+                    }
+                    #menu-item-29{
+                        border: none;
+                    }
+                }
+                &:hover ul{
+                    visibility: visible;
+                }
             }
             }
             #menu-item-21{
