--- a/style-rtl.css
+++ b/style-rtl.css
@@ -103,7 +103,7 @@ a {
 .mainHeaderBack .mainHeader .signSection svg {
   margin-right: 20px;
 }
-.mainHeaderBack .mainHeader path, .mainHeaderBack .mainHeader circle {
+.mainHeaderBack .mainHeader .signSection svg path, .mainHeaderBack .mainHeader .signSection svg circle {
   fill: white;
 }
 .mainHeaderBack .mainView {
