--- a/style-rtl.scss
+++ b/style-rtl.scss
@@ -27,6 +27,7 @@ a{
                 padding: 5px 10px;
                 font-weight: 600;
                 ul{
+                    z-index: 100;
                     position: absolute;
                     background-color: white;
                     color: black;
@@ -154,6 +155,16 @@ a{
                 text-align: center;
                 margin-bottom: 50px;
                 font-weight: 100;
+            }
+            .swiper-pagination{
+                position: unset !important;
+                span{
+                    background: white;
+                    opacity: 100%;
+                }
+                .swiper-pagination-bullet-active{
+                    background: #cdb578;
+                }
             }
             .cards{
             display: flex;
