--- a/style-rtl.css
+++ b/style-rtl.css
@@ -516,6 +516,35 @@ a {
   display: flex;
 }
 
+.mainArchiveGridWrapper {
+  max-width: 1280px;
+  margin: auto;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-between;
+}
+.mainArchiveGridWrapper img {
+  width: 100%;
+}
+.mainArchiveGridWrapper a {
+  width: 39%;
+  position: relative;
+}
+.mainArchiveGridWrapper a:nth-child(4n), .mainArchiveGridWrapper a:nth-child(1), .mainArchiveGridWrapper a:nth-child(4n+1) {
+  width: 59%;
+}
+.mainArchiveGridWrapper a .projectCard {
+  width: 100%;
+  height: 100%;
+  position: absolute;
+  top: 0;
+  right: 0;
+  z-index: 90;
+  background: linear-gradient(rgba(19, 19, 19, 0.374), rgba(40, 40, 40, 0.92));
+  display: flex;
+  align-items: flex-end;
+  color: w;
+}
 .mainFooterBack {
   background-color: #1e1e1e;
   padding: 50px 20px;
