--- a/style-rtl.scss
+++ b/style-rtl.scss
@@ -481,7 +481,42 @@ a{
         }
     }
 }
+.mainArchiveGridWrapper{
+    max-width: 1280px;
+    margin: auto;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
 
+    // display: grid;
+    // grid-template-columns: auto auto ;
+    // gap: 20px;
+    img{
+        width: 100%;
+    }
+    a{
+        width: 39%;
+        &:nth-child(4n),&:nth-child(1),&:nth-child(4n+1){
+            width: 59%;
+        }
+        position: relative;
+        .projectCard{
+            width: 100%;
+            height: 100%;
+            position: absolute;
+            top: 0;
+            right: 0;
+            z-index: 90;
+            background: linear-gradient(rgba(19, 19, 19, 0.374),rgba(40, 40, 40, 0.92));
+            display: flex;
+            align-items: flex-end;
+            color: w;
+            h4{
+                
+            }
+        }
+    }
+}
 .mainFooterBack{
     background-color: #1e1e1e;
     padding: 50px 20px;
